fixes/alert modal overflow

--- a/src/styles/global/_toastNotification.module.scss
+++ b/src/styles/global/_toastNotification.module.scss
@@ -21,9 +21,8 @@
         padding: 1rem;
         margin-bottom: .2rem;
     
-        .iconCon{
-    
-        }
+        // .iconCon{
+        // }
     
         .textCon{
             flex-grow: 1;
